--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<img src="logo.png" alt="شعار الموقع" width="200" style="display:block; margin:auto;">
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1>مرحبا بكم في موقع فرملية 🌿</h1>
