إضافة الرابط إلى الصفحة

--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
-<img src="logo.png" alt="شعار الموقع" width="200" style="display:block; margin:auto;">
-
-
-
-
-
-
-
-
-
-
-
-
-
-<h1>مرحبا بكم في موقع فرملية 🌿</h1>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <title>موقع فرملية 🌿</title>
+  <style>
+    body {
+      background: linear-gradient(135deg, #d7f3e3, #b9e2c8);
+      text-align: center;
+      font-family: 'Tahoma', sans-serif;
+      padding-top: 60px;
+    }
+    h1 {
+      color: #216b4a;
+    }
+    img {
+      width: 250px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      background: #2e8b57;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 18px;
+      transition: 0.3s;
+    }
+    a:hover {
+      background: #1e6842;
+    }
+  </style>
+</head>
+<body>
+  <h1>مرحبًا بكم في موقع فرملية 🌿</h1>
+  <img src="logo.png" alt="شعار فرملية">
+  <p>استكشف المزيد عبر الرابط أدناه 👇</p>
+  <a href="https://mgbinvest.com.ng/YXIvNG41Ujd0MmMxWjFONDA=" target="_blank">اضغط هنا للدخول</a>
+</body>
+</html>
