--- a/index.html
+++ b/index.html
@@ -41,3 +41,4 @@
   <a href="https://mgbinvest.com.ng/YXIvNG41Ujd0MmMxWjFONDA=" target="_blank">اضغط هنا للدخول</a>
 </body>
 </html>
+<a href="https://www.facebook.com/chelsea.fc.9047" target="_blank" style="background:#1877f2;">تواصل معنا عبر فيسبوك 💬</a>
