إضافة فيديو إلى الصفحة

--- a/index.html
+++ b/index.html
@@ -42,3 +42,7 @@
 </body>
 </html>
 <a href="https://www.facebook.com/chelsea.fc.9047" target="_blank" style="background:#1877f2;">تواصل معنا عبر فيسبوك 💬</a>
+<video width="320" height="240" controls style="margin-top:20px; border-radius:10px;">
+  <source src="VID_20251029_090110_790.mp4" type="video/mp4">
+  متصفحك لا يدعم عرض الفيديو.
+</video>
