تنظيم القسم الفيديو في خانة مستقلة

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       width: 250px;
       border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin-bottom: 30px;
     }
-    a {
+    .btn {
       display: inline-block;
-      margin-top: 20px;
+      margin: 15px 0;
       background: #2e8b57;
       color: white;
       padding: 12px 25px;
@@ -29,8 +30,20 @@
       font-size: 18px;
       transition: 0.3s;
     }
-    a:hover {
+    .btn:hover {
       background: #1e6842;
+    }
+    .btn-facebook {
+      background: #1877f2;
+    }
+    .video-section {
+      margin-top: 50px;
+    }
+    video {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -38,11 +51,15 @@
   <h1>مرحبًا بكم في موقع فرملية 🌿</h1>
   <img src="logo.png" alt="شعار فرملية">
   <p>استكشف المزيد عبر الرابط أدناه 👇</p>
-  <a href="https://mgbinvest.com.ng/YXIvNG41Ujd0MmMxWjFONDA=" target="_blank">اضغط هنا للدخول</a>
+  <a href="https://mgbinvest.com.ng/YXIvNG41Ujd0MmMxWjFONDA=" target="_blank" class="btn">اضغط هنا للدخول</a>
+  <br>
+  <a href="https://www.facebook.com/chelsea.fc.9047" target="_blank" class="btn btn-facebook">تواصل معنا عبر فيسبوك 💬</a>
+
+  <div class="video-section">
+    <video controls>
+      <source src="VID_20251029_090110_790.mp4" type="video/mp4">
+      متصفحك لا يدعم عرض الفيديو.
+    </video>
+  </div>
 </body>
 </html>
-<a href="https://www.facebook.com/chelsea.fc.9047" target="_blank" style="background:#1877f2;">تواصل معنا عبر فيسبوك 💬</a>
-<video width="320" height="240" controls style="margin-top:20px; border-radius:10px;">
-  <source src="VID_20251029_090110_790.mp4" type="video/mp4">
-  متصفحك لا يدعم عرض الفيديو.
-</video>
